--- a/net/curl/Config.in
+++ b/net/curl/Config.in
@@ -4,6 +4,7 @@ comment "SSL support"
 
 choice
 	prompt "Selected SSL library"
+	default LIBCURL_WOLFSSL if TARGET_mpc85xx
 	default LIBCURL_MBEDTLS
 
 	config LIBCURL_MBEDTLS
