We've compared all packages in the package feed against the current NIST dictionary and found these 29 with a known CPE ID which was still missing.
Signed-off-by: Steffen Pfendtner <s.pfendtner@ads-tec.de>

--- a/libs/boringssl/Makefile
+++ b/libs/boringssl/Makefile
@@ -5,6 +5,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=boringssl
+PKG_CPE_ID:=cpe:/a:google:boringssl
 PKG_VERSION:=20210608
 PKG_RELEASE:=$(AUTORELEASE)
 
