--- a/net/nfs-kernel-server/Makefile
+++ b/net/nfs-kernel-server/Makefile
@@ -7,6 +7,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=nfs-kernel-server
+PKG_CPE_ID:=cpe:/a:linux-nfs:nfs-utils
 PKG_VERSION:=2.5.4
 PKG_RELEASE:=5
 PKG_HASH:=546ce4b51eeebc66e354b6cc6ca0ce509437efbdef0caaf99389534eef0e598b
