--- a/utils/gnuplot/Makefile
+++ b/utils/gnuplot/Makefile
@@ -1,6 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=gnuplot
+PKG_CPE_ID:=cpe:/a:gnuplot_project:gnuplot
 PKG_VERSION:=5.4.2
 PKG_RELEASE:=2
 PKG_MAINTAINER:=Matteo Cicuttin <datafl4sh@toxicnet.eu>
