keepalived-sync: switch from busybox-timeout to coreutils-timeout
So that the busybox configuration does not have to be adapted, the
dependency has been changed to coreutils-timeout, which provides the
same functionality.

Signed-off-by: Florian Eckert <fe@dev.tdt.de>

--- a/net/keepalived/Makefile
+++ b/net/keepalived/Makefile
@@ -278,7 +278,7 @@ define Package/keepalived-sync
   SECTION:=net
   CATEGORY:=Network
   TITLE:=Keepalived Master and Backup Synchronization
-  DEPENDS:= +keepalived +rsync +inotifywait +sudo +@BUSYBOX_CUSTOM +@BUSYBOX_CONFIG_TIMEOUT
+  DEPENDS:= +keepalived +rsync +inotifywait +sudo +coreutils-timeout
 endef
 
 define Package/keepalived-sync/description
