--- a/net/net-snmp/files/snmpd.conf
+++ b/net/net-snmp/files/snmpd.conf
@@ -128,3 +128,13 @@ config engineid
 config snmpd general
 	option enabled '1'
 #	list network 'wan'
+
+config user
+#	option enabled '1'
+#	option username 'snmpv3user'
+#	option perm 'rw'
+#	option authProto 'SHA'
+#	option privProto 'AES'
+#	option authKey '123456780'
+#	option privKey '123456789'
+
