--- a/libs/libwebsockets/Makefile
+++ b/libs/libwebsockets/Makefile
@@ -51,6 +51,7 @@ define Package/libwebsockets-openssl
 	TITLE += (OpenSSL)
 	DEPENDS += +libopenssl
 	VARIANT:=openssl
+	CONFLICTS:=libwebsockets-full
 endef
 
 define Package/libwebsockets-mbedtls
@@ -65,6 +66,7 @@ define Package/libwebsockets-full
 	TITLE += (Full - OpenSSL, libuv, plugins, CGI)
 	DEPENDS += +libopenssl +libuv
 	VARIANT:=full
+	PROVIDES:=libwebsockets-openssl
 endef
 
 ifeq ($(BUILD_VARIANT),openssl)
