libwebsockets: OpenSSL and mbedTLS variants should conflict
They provide the same files, but they don't conflict to each other, this
means that users can install them side by side.

Signed-off-by: Josef Schlehofer <pepe.schlehofer@gmail.com>

--- a/libs/libwebsockets/Makefile
+++ b/libs/libwebsockets/Makefile
@@ -64,6 +64,7 @@ define Package/libwebsockets-mbedtls
 	TITLE += (mbedTLS)
 	DEPENDS += +libmbedtls
 	VARIANT:=mbedtls
+	CONFLICTS:=libwebsockets-openssl
 endef
 
 define Package/libwebsockets-full
