--- a/libs/libwebsockets/Makefile
+++ b/libs/libwebsockets/Makefile
@@ -46,7 +46,6 @@ define Package/libwebsockets/Default
 	DEPENDS:=+zlib +libcap
 	URL:=https://libwebsockets.org
 	MAINTAINER:=Karl Palsson <karlp@etactica.com>
-	PROVIDES:= libwebsockets
 endef
 
 define Package/libwebsockets-openssl
@@ -62,6 +61,7 @@ define Package/libwebsockets-mbedtls
 	TITLE += (mbedTLS)
 	DEPENDS += +libmbedtls
 	VARIANT:=mbedtls
+	PROVIDES:=libwebsockets
 	CONFLICTS:=libwebsockets-openssl
 endef
 
@@ -70,7 +70,7 @@ define Package/libwebsockets-full
 	TITLE += (Full - OpenSSL, libuv, plugins, CGI)
 	DEPENDS += +libopenssl +libuv
 	VARIANT:=full
-	PROVIDES:=libwebsockets-openssl
+	PROVIDES:=libwebsockets libwebsockets-openssl
 endef
 
 ifeq ($(BUILD_VARIANT),openssl)
