--- a/libs/libwebsockets/Makefile
+++ b/libs/libwebsockets/Makefile
@@ -48,7 +48,6 @@ define Package/libwebsockets/Default
 	DEPENDS:=+zlib +libcap
 	URL:=https://libwebsockets.org
 	MAINTAINER:=Karl Palsson <karlp@etactica.com>
-	PROVIDES:= libwebsockets
 endef
 
 define Package/libwebsockets-openssl
@@ -64,6 +63,7 @@ define Package/libwebsockets-mbedtls
 	TITLE += (mbedTLS)
 	DEPENDS += +libmbedtls
 	VARIANT:=mbedtls
+	PROVIDES:=libwebsockets
 	CONFLICTS:=libwebsockets-openssl
 endef
 
@@ -72,7 +72,7 @@ define Package/libwebsockets-full
 	TITLE += (Full - OpenSSL, libuv, plugins, CGI)
 	DEPENDS += +libopenssl +libuv
 	VARIANT:=full
-	PROVIDES:=libwebsockets-openssl
+	PROVIDES:=libwebsockets libwebsockets-openssl
 endef
 
 ifeq ($(BUILD_VARIANT),openssl)
