--- a/net/fvpn/Makefile
+++ b/net/fvpn/Makefile
@@ -8,7 +8,7 @@ PKG_NAME:=fvpn
 PKG_VERSION:=0.2.1-post.1
 PKG_RELEASE:=$(AUTORELEASE)
 
-PKG_SOURCE:=v$(PKG_VERSION).tar.gz
+PKG_SOURCE:=$(PKG_NAME)-v$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://codeload.github.com/forestvpn/cli/tar.gz/refs/tags/v$(PKG_VERSION)
 PKG_HASH:=34583aca56237484f6b820bd4ffb3ad82cdbc90af6e3dd0b577e25f6509ce8b1
 
@@ -27,24 +27,17 @@ GO_PKG_LDFLAGS_X:=$(GO_PKG).appVersion=$(PKG_VERSION)
 include $(INCLUDE_DIR)/package.mk
 include ../../lang/golang/golang-package.mk
 
-define Package/fvpn/template
+
+define Package/fvpn
   TITLE:=fvpn
   SECTION:=net
   CATEGORY:=Network
   URL:=https://forestvpn.com
-endef
-
-define Package/fvpn
-  $(call Package/fvpn/template)
   DEPENDS:=$(GO_ARCH_DEPENDS) +wireguard-tools
 endef
 
 define Package/fvpn/description
   ForestVPN - Fast, secure, and modern VPN.
-endef
-
-define Package/fvpn/description
-  $(call Package/fvpn/description)
 endef
 
 define Package/fvpn/install
