--- a/sound/pulseaudio/Makefile
+++ b/sound/pulseaudio/Makefile
@@ -32,7 +32,7 @@ define Package/pulseaudio-daemon/Default
   DEPENDS:=+libsndfile +libltdl +libpthread +librt +alsa-lib \
 	+libopenssl +libcap $(ICONV_DEPENDS) $(INTL_DEPENDS)
   TITLE:=Network sound server
-  URL:=https://www.pulseaudio.org
+  URL:=https://www.freedesktop.org/wiki/Software/PulseAudio/
   PROVIDES:=pulseaudio
   USERID:=pulse=51:pulse=51
 endef
@@ -73,7 +73,7 @@ define Package/pulseaudio-tools
   CATEGORY:=Sound
   DEPENDS:=+libsndfile pulseaudio
   TITLE:=Tools for Pulseaudio
-  URL:=http://www.pulseaudio.org
+  URL:=https://www.freedesktop.org/wiki/Software/PulseAudio/
   VARIANT:=noavahi
 endef
 
@@ -82,7 +82,7 @@ define Package/pulseaudio-profiles
   CATEGORY:=Sound
   DEPENDS:=pulseaudio
   TITLE:=Profiles for Pulseaudio
-  URL:=http://www.pulseaudio.org
+  URL:=https://www.freedesktop.org/wiki/Software/PulseAudio/
 endef
 
 MESON_ARGS += \
