--- a/net/fvpn/Makefile
+++ b/net/fvpn/Makefile
@@ -9,7 +9,7 @@ PKG_VERSION:=0.2.1-post.1
 PKG_RELEASE:=$(AUTORELEASE)
 
 PKG_SOURCE:=$(PKG_NAME)-v$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://codeload.github.com/forestvpn/cli/tar.gz/refs/tags/v$(PKG_VERSION)
+PKG_SOURCE_URL:=https://codeload.github.com/forestvpn/cli/tar.gz/v$(PKG_VERSION)
 PKG_HASH:=34583aca56237484f6b820bd4ffb3ad82cdbc90af6e3dd0b577e25f6509ce8b1
 
 PKG_LICENSE:=MIT
@@ -27,17 +27,12 @@ GO_PKG_LDFLAGS_X:=$(GO_PKG).appVersion=$(PKG_VERSION)
 include $(INCLUDE_DIR)/package.mk
 include ../../lang/golang/golang-package.mk
 
-
 define Package/fvpn
-  TITLE:=fvpn
+  TITLE:=ForestVPN - Fast, secure, and modern VPN.
   SECTION:=net
   CATEGORY:=Network
   URL:=https://forestvpn.com
   DEPENDS:=$(GO_ARCH_DEPENDS) +wireguard-tools
-endef
-
-define Package/fvpn/description
-  ForestVPN - Fast, secure, and modern VPN.
 endef
 
 define Package/fvpn/install
