btop: append `--utf-force` argument by default
btop reads the `LANG` env variable to delect if the system has utf8
support, which exists on common Linux distributions.

However, OpenWrt does not ship it, and results in btop reporting
"No UTF-8 locale detected!". Users have to manually pass `--utf-force`
to make btop happy.

To make it OOTB, append `--utf-force` argument by default via alias.

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/admin/btop/Makefile
+++ b/admin/btop/Makefile
@@ -42,6 +42,9 @@ define Package/btop/install
 	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/local/bin/btop $(1)/usr/bin/
 	$(INSTALL_DIR) $(1)/usr/share
 	$(CP) $(PKG_INSTALL_DIR)/usr/local/share/btop $(1)/usr/share/
+
+	$(INSTALL_DIR) $(1)/etc/profile.d
+	$(CP) $(CURDIR)/files/btop.sh $(1)/etc/profile.d/
 endef
 
 $(eval $(call BuildPackage,btop))
