--- a/multimedia/tvheadend/Config.in
+++ b/multimedia/tvheadend/Config.in
@@ -4,7 +4,7 @@ comment "Generic options"
 config TVHEADEND_OPTIMIZE_SPEED
   bool "Optimize for speed"
   depends on PACKAGE_tvheadend
-  default n
+  default y
   help
     Optimize tvheadend for speed instead of size. This option adds -O2 and LTO (Link Time Optimization).
     Note: No benchmarks were performed when this option was added. Speed improvements (if any) are not known.
@@ -71,7 +71,7 @@ config TVHEADEND_LINUXDVB_SUPPORT
 config TVHEADEND_DVBSCAN_SUPPORT
   bool "Include DVB-scan tables"
   depends on TVHEADEND_LINUXDVB_SUPPORT
-  default TVHEADEND_LINUXDVB_SUPPORT
+  default n
   help
     Download and include DVB scan tables.
 
