frp：add enable options

--- a/net/frp/files/frpc.config
+++ b/net/frp/files/frpc.config
@@ -11,6 +11,7 @@ config init
 #	list conf_inc '/etc/frp/frpc.d/frpc_full.ini'
 
 config conf 'common'
+	option enabled '0'
 	option server_addr 127.0.0.1
 	option server_port 7000
 #	List options with name="_" will be directly appended to config file
