--- a/net/frp/files/frps.config
+++ b/net/frp/files/frps.config
@@ -11,6 +11,7 @@ config init
 #	list conf_inc '/etc/frp/frps.d/frps_full.ini'
 
 config conf 'common'
+	option enabled '0'
 	option bind_port 7000
 #	List options with name="_" will be directly appended to config file
 #	list _ '# Key-A=Value-A'
