django: reset PKG_RELEASE to 1
Omitted during review.

Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/lang/python/django/Makefile
+++ b/lang/python/django/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=django
 PKG_VERSION:=3.2.16
-PKG_RELEASE:=$(AUTORELEASE)
+PKG_RELEASE:=1
 
 PYPI_NAME:=Django
 PKG_HASH:=3adc285124244724a394fa9b9839cc8cd116faf7d159554c43ecdaa8cdf0b94d
